manifests/qa/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hw-nodejs
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/healthcheck-path: /
      alb.ingress.kubernetes.io/healthcheck-port: "3000"
spec:
  ingressClassName: alb  # Use the ALB ingress class
  rules:
    - host: qa2.helloworld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw-nodejs
                port:
                  number: 3000
